--- a/soundzRN/ios/Podfile
+++ b/soundzRN/ios/Podfile
@@ -20,6 +20,12 @@ pod 'react-native-blob-util',
 
 pod 'RNAudioRecorderPlayer', :path => '../node_modules/react-native-audio-recorder-player'
 
+pod 'ffmpeg-kit-react-native', :subspecs => ['audio'], :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
+# pod 'ffmpeg-kit-react-native', :path => '../node_modules/ffmpeg-kit-react-native'
+
+# pod 'react-native-ffmpeg', :podspec => '../node_modules/react-native-ffmpeg/ios/react-native-ffmpeg.podspec'
+
+
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
