--- a/soundzRN/android/build.gradle
+++ b/soundzRN/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         kotlinVersion = "1.5.31"
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        ffmpegKitPackage = "audio"
     }
     repositories {
         google()
